# bluebird_tree

./: README.rst  pyproject.toml
blue_bird_tree/: followers_lookup.py
bluebird_tree/: followers_lookup.py  pinned_tweet_ids.txt  pinned_tweets_lookup.py  web_scraper.ipynb
bluebird_tree/.ipynb_checkpoints/: web_scraper-checkpoint.ipynb
tests/: test_blue_bird_tree.py  test_bluebird_tree.py
